# google-authenticator-exporter

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: main.py
src/otp_export/: OtpMigration_pb2.py  parse.py
