[tool.poetry]
name = "gauth2authy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyzbar = "^0.1.8"
Pillow = "^8.3.2"
opencv-python = "^4.5.3"
ipdb = "^0.13.9"
protobuf = "^3.18.0"
pyotp = "^2.6.0"
mypy = "^0.910"
qrcode = "^7.3"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
