[tool.poetry]
name = "gauth2authy"
version = "0.1.0"
description = "Decode and separate Google Authenticator export bundle into individual OTP QR codes"
authors = ["Kamyar Ghaseemlou <github@kamy.me>"]
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
gauth_exporter = "src.main:export"

[tool.poetry.dependencies]
python = "^3.9"
pyzbar = "^0.1.8"
Pillow = "^8.3.2"
opencv-python = "^4.5.3"
protobuf = "^3.18.0"
pyotp = "^2.6.0"
qrcode = "^7.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pre-commit = "^2.15.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
